# UCL-VI-Pipeline

./: .dockerignore  .env  Cargo.toml  README.md  docker-compose.yml  payload.json  schema.sql
.sqlx/: query-ca700e17c4a5d119dc1c4e59870d7bc698b4356c29cada50a4abba6be0618374.json  query-d031b93164ae15024204c350729d5c0912a0d4fa1832c80904beb7e73700b5b4.json
collector/: Cargo.toml  Dockerfile
collector/src/: main.rs
common/: Cargo.toml
processor/: Cargo.toml  Dockerfile
processor/src/: main.rs  normalisation.rs
