[package]
name = "processor"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "time", "chrono"], default-features = false }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
